--- a/myportfolio/package.json
+++ b/myportfolio/package.json
@@ -2,7 +2,7 @@
   "name": "myportfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://sbuchanan1.github.io/react-portfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
